fixing padding on Safari and Firefox

--- a/styles/style.css
+++ b/styles/style.css
@@ -176,7 +176,7 @@ h2 {
   scrollbar-width: thin;
   width: 100%;
   margin-bottom: 20px;
-  padding: 20px 30px 10px 5px;
+  padding: 20px 30px 15px 25px;
   background-color: var(--soft-orange-lighter);
 }
 
